<resources>
    <string name="app_name">Classroom Scheduler</string>
    <string name="login_btn">Login</string>
    <string name="the_technocrats_nsut">The Technocrats NSUT</string>
    <string name="get_started">Get Started</string>
    <string name="classroom_scheduler">CLASSROOM SCHEDULER</string>
    <string name="skip">SKIP</string>
    <string name="schedule_your_online_classes">Schedule your online classes</string>
    <string name="this_app_lets_you_schedule_your_classes">This app lets you schedule your classes!</string>
    <string name="save_time">Save time!</string>
    <string name="sample_text_sample_text_sample_text">sample text sample text sample text</string>
    <string name="smart_learning">Smart Learning</string>
    <string name="next">NEXT</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_using_your_google_account">Sign In using your google account</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="instagram_image">instagram image</string>
    <string name="facebook_image">facebook image</string>
    <string name="twitter_image">twitter image</string>
    <string name="follow_us">Follow us</string>
    <string name="share_invitation_code">Share Invitation Code</string>
    <string name="loren_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="notices_view_title">Notices</string>
    <string name="create_new_notice">Create New Notice</string>
    <string name="people_view_title">People</string>
    <string name="notice_text_hint">Enter your notice text here…</string>
    <string name="post_notice">Post Notice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_default_schedule">Edit Default Schedule</string>
    <string name="add_upcoming_event">Add Upcoming Event</string>
    <string name="enter_hub_name_here">Enter Hub Code To Join</string>
    <string name="join_hub">Join Hub</string>
    <string name="enter_new_hub_name">Enter New Hub Name</string>
    <string name="create_hub">Create Hub</string>
    <string name="people">People</string>
    <string name="upcoming">Upcoming</string>
    <string name="notices">Notices</string>
    <string name="delete_notice_button">Delete Notice Button</string>
</resources>